--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
     <h1>
         Vení al Gym! 💪🏻
     </h1>
+
+    <form action="">
+        <input type="text" >
+
+    </form>
+    
+    <h3> 
+        🙋🏼‍♂️ Datos Personales 👀
+    </h3>
 </body>
 </html>
