--- a/index.html
+++ b/index.html
@@ -13,13 +13,73 @@
         Vení al Gym! 💪🏻
     </h1>
 
-    <form action="">
-        <input type="text" >
-
-    </form>
     
-    <h3> 
-        🙋🏼‍♂️ Datos Personales 👀
-    </h3>
+
+    <div id="datos">
+        <h3> 
+            🙋🏼‍♂️ Datos Personales 👀
+        </h3>
+
+        <h4>Nombre:*</h4>
+        <form action="">
+            <label for=""></label>
+            <input type="text" required>
+        </form>
+        <br>
+
+
+
+        <h4>Apellido:*</h4>
+        <form action="">
+            <label for=""></label>
+            <input type="text" required>
+        </form>
+        <br>
+
+
+
+        <h4>Documento:*</h4>
+        <form action="">
+            <label for=""></label>
+            <input type="number" min="0" required>
+        </form>
+        <br>
+
+
+
+        <h4>Nacionalidad:*</h4>
+        <form action="">
+            <label for=""></label>
+            <select name="- seleccionar -" id="" required>
+                <option value="Argentina"></option>
+                <option value="Brasileña"></option>
+                <option value="Uruguaya"></option>
+                <option value="Otra"></option>
+            </select>
+        </form>
+        <br>
+
+
+
+        <h4 style="padding-left: 30%;">Contanos un poco de vos...:</h4>
+        <form action="">
+            <label for=""></label>
+            <textarea name="" id=""></textarea>
+        </form>
+        <br>
+        
+
+        <h4>Sexo:*</h4>
+        <form action="">
+            <label for=""></label>
+            <select name="" id=""></select>
+                    <option value="Femenino"></option>
+                    <option value="Masculino"></option>
+                    <option value="Otro"></option>
+            </select>
+        </form>
+        <br>
+    </div>
+
 </body>
 </html>
